--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="black.jpg" alt="">
+      <img src="assets/img/black.jpg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -87,7 +87,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="ch.jpg" class="img-fluid" alt="">
+            <img src="assets/img/ch.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2> Web Developer.</h2>
